cmake_minimum_required(VERSION 2.8)

project(vacuum-spellchecker)
set(PLUGIN_NAME "spellchecker")
set(SOURCES spellchecker.cpp spellbackend.cpp spellhighlighter.cpp)
set(HEADERS spellchecker.h spellbackend.h spellhighlighter.h)
set(MOC_HEADERS spellchecker.h spellbackend.h spellhighlighter.h)
set(LOCALIZED_LANGS "ru;pl;de;uk")

set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake-modules)

if (NOT DEFINED SPELLCHECKER_BACKEND)
	set(SPELLCHECKER_BACKEND "ENCHANT")
endif (NOT DEFINED SPELLCHECKER_BACKEND)

find_package(${SPELLCHECKER_BACKEND} REQUIRED)

if (ENCHANT_FOUND)
	set(SOURCES ${SOURCES} enchantchecker.cpp)
	set(HEADERS ${HEADERS} enchantchecker.h)
	set(MOC_HEADERS ${MOC_HEADERS} enchantchecker.h)
	include_directories("${ENCHANT_INCLUDE_DIR} ")
	add_definitions(-DHAVE_ENCHANT)
elseif (ASPELL_FOUND)
	set(SOURCES ${SOURCES} aspellchecker.cpp)
	set(HEADERS ${HEADERS} aspellchecker.h)
	set(MOC_HEADERS ${MOC_HEADERS} aspellchecker.h)
	include_directories("${ASPELL_INCLUDE_DIR}")
	add_definitions(-DHAVE_ASPELL)
elseif (HUNSPELL_FOUND)
	set(SOURCES ${SOURCES} hunspellchecker.cpp)
	set(HEADERS ${HEADERS} hunspellchecker.h)
	set(MOC_HEADERS ${MOC_HEADERS} hunspellchecker.h)
	include_directories("${HUNSPELL_INCLUDE_DIR}")
	add_definitions(-DHAVE_HUNSPELL)
endif (ENCHANT_FOUND)

if (ENCHANT_FOUND)
	set(ADD_LIBS ${ENCHANT_LIBRARIES})
elseif (ASPELL_FOUND)
	set(ADD_LIBS ${ASPELL_LIBRARIES})
elseif (HUNSPELL_FOUND)
	set(ADD_LIBS ${HUNSPELL_LIBRARIES})
endif (ENCHANT_FOUND)

include("${CMAKE_SOURCE_DIR}/cmake/config.cmake")
include("${CMAKE_SOURCE_DIR}/cmake/translations.cmake")
include("${CMAKE_SOURCE_DIR}/cmake/plugin.cmake")
